[package]
name = "modrinth-wrapper"
version = "0.1.0"
edition = "2024"
exclude = [
    "modrinth-docs"
]
description = "A Rust wrapper for the Modrinth API."
license = "MIT"
[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"
